--- a/allproducts.html
+++ b/allproducts.html
@@ -101,6 +101,10 @@
 
         </main>
         <footer>
+            <picture class="left">
+                <source srcset="images/logo.svg" type="image/svg">
+                <img src="images/logo_small.png" alt="Logotyp">
+            </picture>
             <p class="right">
                 <a href="#" class="fa fa-brands fa-square-bluesky fa-2xl"></a> 
                 <a href="#" class="fa fa-brands fa-square-snapchat fa-2xl"></a> 
