--- a/product3.html
+++ b/product3.html
@@ -44,6 +44,10 @@
             <p>Letar du efter någon annan produkt? <a href="allproducts.html">Klicka här för att komma tillbaka till sidan med alla produkter!</a></p>
         </main>
         <footer>
+            <picture class="left">
+                <source srcset="images/logo.svg" type="image/svg">
+                <img src="images/logo_small.png" alt="Logotyp">
+            </picture>
             <p class="right">
                 <a href="#" class="fa fa-brands fa-square-bluesky fa-2xl"></a> 
                 <a href="#" class="fa fa-brands fa-square-snapchat fa-2xl"></a> 
